# programming-cpp-practices

practice_1/: practice_15_09.cpp
practice_10/: practice_24_11  practice_24_11.cpp
practice_11/: practice_12_01  practice_12_01.cpp
practice_12/: CMakeLists.txt  practice_19_01.cpp
practice_12/include/: Graph.h  Node.h
practice_12/src/: Graph.cpp
practice_15/: CMakeLists.txt  practice_09_02.cpp
practice_15/chess/board/include/: Board.h  Position.h
practice_15/chess/board/src/: Board.cpp  Position.cpp
practice_15/chess/pieces/include/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
practice_15/chess/pieces/src/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
practice_15/shapes/include/: Circle.h  Rectangle.h  Shape.h  Triangle.h
practice_15/shapes/src/: Circle.cpp  Rectangle.cpp  Triangle.cpp
practice_16/: practice_16_02.cpp
practice_19/: practice_07_03.cpp
practice_2/: praсtice_22_09.cpp
practice_3/: praсtice_29_09.cpp
practice_4/: praсtice_06_10.cpp
practice_5/: CMakeLists.txt  main.cpp  pratice_13_10.cpp
practice_5/include/: DynArray.h  LinearSystemSolver.h  Mat2D.h  Vec3d.h  VecND.h
practice_5/src/: DynArray.cpp  LinearSystemSolver.cpp  Mat2D.cpp  Vec3d.cpp  VecND.cpp
practice_6/: CMakeLists.txt  practice_20_10.cpp
practice_6/include/: Mat2D.h  Queue.h  VecND.h
practice_6/src/: Mat2D.cpp  Queue.cpp  VecND.cpp
practice_7/: practice_03_11.cpp
practice_8/: CMakeLists.txt  practice_10_11.cpp
practice_8/src/: SinglyLinkedList.cpp
practice_9/: CMakeLists.txt  practice_17_11  practice_17_11.cpp
(+3 files in other folders)
